# GMTK-2025

./: Makefile  README.adoc  choop  main.cpp  meson.build  scores.txt
buffs/: bishops.hpp  bishops_bad.hpp  bishops_good.hpp  buff.hpp  hammer.hpp  invisible_enemies.hpp  nothin.hpp  pawns_exp_bad.hpp  pawns_exp_good.hpp  promote_bad.hpp  promote_good.hpp  sticky_hand.hpp  stone.hpp
documentation/: Basic Chess.md  Buffs.md  Ideas.md  Kanban.md  Makefile  Refinement.md
documentation/.obsidian/: workspace.json
documentation/dev_logs/: 2025-07-30.md
documentation/milestones/: Basic Chess.md
main/: Makefile  board.cpp  board.hpp  main.cpp  stockfish.cpp  stockfish.hpp
pieces/: Makefile  bishop.cpp  bishop.hpp  king.cpp  king.hpp  knight.cpp  knight.hpp  pawn.cpp  pawn.hpp  piece.cpp  piece.hpp  queen.cpp  queen.hpp  rook.cpp  rook.hpp
ui/: Makefile  button.cpp  button.hpp  number_field.cpp  number_field.hpp
window/: Makefile  loadtexbmp.cpp  shader.cpp  window.cpp  window.hpp
